# conquisterco

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  schema.sql
conquisterco/: __init__.py  achievements.py  config.py  db.py  elevation.py  enrich.py  enrich_osm.py  geo.py  geo_osm.py  geoarea.py  geonames.py  ingest.py  leaderboards.py  models.py  ownership.py  pipeline.py  recompute.py  seed.py  util.py
conquisterco/app/: __init__.py  adminctl.py  auth.py  bot.py  data.py  main.py  recapcli.py  translations.py  triggers.py
conquisterco/app/static/: app.js  style.css
conquisterco/app/templates/: admin.html  gallery.html  index.html  privacy.html  profile.html
conquisterco/importers/: __init__.py  cli.py  loader.py  whatsapp.py
docs/: whatsapp-import.md
tests/: conftest.py  test_achievements.py  test_auth.py  test_badges_new.py  test_badges_time.py  test_bot.py  test_elevation.py  test_gallery.py  test_geoarea.py  test_import_loader.py  test_ingest_enrich.py  test_osm.py  test_profile.py  test_recompute.py  test_triggers.py  test_whatsapp.py
