[project]
name = "conquisterco"
version = "0.1.0"
description = "Il Cacasto — territory-control mondiale a base fecale (motore di dominio)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = []
# Fase 1 gira su sola stdlib (sqlite3). Le dipendenze pesanti arrivano dopo:
#   geo reale  → shapely, pyproj   (point-in-polygon su poligoni OSM)
#   dashboard  → fastapi, uvicorn, jinja2
#   bot        → python-telegram-bot

[project.optional-dependencies]
dev = ["pytest>=8"]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "itsdangerous>=2.1",     # SessionMiddleware
    "python-multipart>=0.0.9",  # form login
]

[project.scripts]
conquisterco-demo = "conquisterco.seed:main"
conquisterco-serve = "conquisterco.app.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conquisterco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
